# Assignment3

./: .dockerignore  .gitignore  README.md  docker-compose.yml  project_tree_structure
airflow/: Dockerfile  airflow.cfg  pyproject.toml
airflow/dags/: pipeline.py
airflow/dags/modules/: cfa_scrape_data.py
backend/: Dockerfile  delete_vector.py  document_processors.py  insert_vector.py  main.py  pyproject.toml  test_backend.py  try.py
frontend/: Dockerfile  pyproject.toml  streamlit_app.py
