[tool.poetry]
name = "cfa_publications_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
selenium = "^4.25.0"
boto3 = "^1.35.48"
requests = "^2.32.3"
snowflake-connector-python = "^3.12.3"
python-dotenv = "^1.0.1"
apache-airflow = "^2.10.2"
psycopg2 = "^2.9.10"
beautifulsoup4 = "^4.12.3"
azure-storage-blob = "^12.23.1"


[build-system] 
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
